<resources>
    <string name="key_offscreen_limit" translatable="false">offscreen_limit</string>
    <string name="key_default_favorite" translatable="false">default_favorite</string>
    <string name="key_default_favorite_tab" translatable="false">default_favorite_tab</string>
    <string name="key_default_value" translatable="false">default_value</string>
    <string name="key_enable_beta" translatable="false">enable_beta</string>
    <string name="key_save_path" translatable="false">save_path</string>
    <string name="key_disguise" translatable="false">disguise</string>
    <string name="key_local_sort" translatable="false">local_sort_type</string>
    <string name="key_user_agent" translatable="false">setting_user_agent</string>
    <string name="key_title_type" translatable="false">title_type_str</string>
    <string name="key_by_popular" translatable="false">is_by_popular</string>
    <string name="key_column_count" translatable="false">column_count</string>
    <string name="key_only_language" translatable="false">only_language</string>
    <string name="key_default_zoom" translatable="false">default_zoom</string>
    <string name="key_theme_select" translatable="false">theme_select</string>
    <string name="key_max_id" translatable="false">max_id</string>
    <string name="key_cache" translatable="false">cache</string>
    <string name="key_inverted_fix" translatable="false">fix_inverted_image</string>
    <string name="key_ignore_tags" translatable="false">ignore_tags</string>
    <string name="key_use_account_tag" translatable="false">use_account_tags</string>
    <string name="key_send_report" translatable="false">send_report</string>
    <string name="key_use_rtl" translatable="false">use_rtl</string>
    <string name="key_show_titles" translatable="false">show_titles</string>
    <string name="key_column_port_hist" translatable="false">column_port_hist</string>
    <string name="key_column_land_hist" translatable="false">column_land_hist</string>
    <string name="key_column_port_main" translatable="false">column_port_main</string>
    <string name="key_column_land_main" translatable="false">column_land_main</string>
    <string name="key_column_port_down" translatable="false">column_port_down</string>
    <string name="key_column_land_down" translatable="false">column_land_down</string>
    <string name="key_column_port_favo" translatable="false">column_port_favo</string>
    <string name="key_column_land_favo" translatable="false">column_land_favo</string>
    <string name="key_column_port_stat" translatable="false">column_port_stat</string>
    <string name="key_column_land_stat" translatable="false">column_land_stat</string>
    <string name="key_exact_title_match" translatable="false">precise_tag</string>
    <string name="key_infinite_scroll_main" translatable="false">key_infinite_scroll</string>
    <string name="key_infinite_scroll_favo" translatable="false">infinite_scroll_favo</string>
    <string name="key_hide_multitasking" translatable="false">hide_multitasking</string>
    <string name="key_site_mirror" translatable="false">site_mirror</string>
    <string name="key_language" translatable="false">key_language</string>
    <string name="key_disable_lock" translatable="false">disable_lock</string>
    <string name="key_max_history_size" translatable="false">max_history_size</string>
    <string name="key_zoom_one_column" translatable="false">zoom_one_column</string>
    <string name="empty_circle" translatable="false">○</string>
    <string name="full_circle" translatable="false">◉</string>
    <string name="key_mobile_usage" translatable="false">mobile_usage</string>
    <string name="key_wifi_usage" translatable="false">wifi_usage</string>
    <string name="key_maximum_notification" translatable="false">maximum_notification</string>
    <string name="key_keep_history" translatable="false">keep_history</string>
    <string name="app_version_format" formatted="true" translatable="false">NClientV3 %s</string>
    <string name="key_override_volume" translatable="false">volume_override</string>
    <string name="key_remove_ignored" translatable="false">remove_ignored</string>
    <string name="key_check_update" translatable="false">check_update</string>
    <string name="key_update" translatable="false">update</string>
    <string name="hashtag" translatable="false">#</string>
    <string name="page_format" formatted="true" translatable="false">%d/%d</string>
    <string name="percentage_format" formatted="true" translatable="false">%d%%</string>
    <string name="page_switcher_placeholder" translatable="false">0/0</string>
    <string name="page_placeholder" translatable="false">999/999</string>
    <string name="key_favorite_limit" translatable="false">favorite_limit</string>
    <string name="key_cookie" translatable="false">cookie</string>
    <string name="key_change_page_buttons" translatable="false">change_page_buttons</string>
    <string name="dash" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    <string name="default_user_agent" translatable="false">Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N)</string>
    <string name="setting_on_ignore_tags">Other tags won\'t be queried when a tag is selected from the gallery menu (except language)</string>
    <string name="setting_off_ignore_tags">Other tags will be queried when a tag is selected from the gallery menu</string>
    <string name="setting_on_use_account_tag">Use the account tags into the search query (Local tags will have priority)</string>
    <string name="setting_off_use_account_tag">Account tags will be ignored for the query</string>
    <string name="theme_summary">Select theme colors</string>
    <string name="send_crash_report">Send crash report</string>
    <string name="change_theme">Change theme</string>
    <string name="clear_cache">Clear cache</string>
    <string name="infinite_scroll">Infinite scroll</string>
    <string name="ignore_tags">Ignore other tags</string>
    <string name="use_account_tag">Use tags from account</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_zoom">Zoom Activity</string>
    <string name="title_activity_tag_filter">Tag Filter</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_username">Username or email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="captcha_required">Complete the CAPTCHA below, then sign in:</string>
    <string name="login_account_header">Sign in with your account</string>
    <string name="or_divider">OR</string>
    <string name="turnstile_title">Verify you\'re human</string>
    <string name="turnstile_title_second">One more check</string>
    <string name="turnstile_subtitle">Cloudflare needs to confirm you\'re not a bot before continuing.</string>
    <string name="turnstile_subtitle_second">Almost there, confirm once more to finish setting up your key.</string>
    <string name="turnstile_error">Verification failed. Tap to try again.</string>
    <string name="login_status_captcha_cancelled">Verification cancelled.</string>
    <string name="manual_api_key_header">Already have an API key?</string>
    <string name="manual_api_key_summary">Generate one in your nhentai account settings and paste it here.</string>
    <string name="prompt_api_key">API key</string>
    <string name="action_save_key">Save key</string>
    <string name="login_status_solving">Solving challenge…</string>
    <string name="login_status_signing_in">Signing in…</string>
    <string name="login_status_creating_key">Generating API key…</string>
    <string name="login_status_captcha_loading">Loading CAPTCHA…</string>
    <string name="login_status_captcha_ready">CAPTCHA solved, you can sign in.</string>
    <string name="login_status_captcha_expired">CAPTCHA expired, solve it again.</string>
    <string name="login_status_captcha_error">CAPTCHA error: %1$s</string>
    <string name="login_status_missing_fields">Enter a username and password.</string>
    <string name="login_status_missing_captcha">Solve the CAPTCHA first.</string>
    <string name="login_status_login_failed">Sign-in failed: %1$s</string>
    <string name="login_status_signed_in">Signed in. API key saved.</string>
    <string name="login_status_key_saved">API key saved.</string>
    <string name="login_status_key_invalid">Enter a valid API key.</string>
    <string name="key_send_app_user_agent" translatable="false">send_app_user_agent</string>
    <string name="title_send_app_user_agent">Identify as NClientV3</string>
    <string name="summary_send_app_user_agent">Send NClientV3/version as User-Agent on API requests so nhentai.net can distinguish app traffic. Off by default for privacy.</string>
    <string name="login_identify_label">Tell nhentai.net I\'m using NClientV3</string>
    <string name="login_identify_explanation">If enabled, API requests send NClientV3/version instead of a generic browser User-Agent. nhentai.net asks apps to identify themselves so they can track real client usage. You can change this later in Settings.</string>
    <string name="relogin_dialog_title">Sign in again</string>
    <string name="relogin_dialog_message">NClientV3 has migrated to nhentai\'s official API. Please sign in again to keep using your account.</string>
    <string name="relogin_dialog_action">Sign in</string>
    <string name="relogin_dialog_dismiss">Later</string>
    <string name="parodies">Parodies</string>
    <string name="characters">Characters</string>
    <string name="tags">Tags</string>
    <string name="artists">Artists</string>
    <string name="groups">Groups</string>
    <string name="languages">Languages</string>
    <string name="categories">Categories</string>
    <string name="unknown">Unknown</string>
    <string name="channel1_name">Download Gallery</string>
    <string name="channel2_name">Create PDF</string>
    <string name="channel3_name">Create ZIP</string>
    <string name="channel1_description">Used to show progress of the download of a gallery</string>
    <string name="channel2_description">Used to show progress of the creation of the PDF</string>
    <string name="channel3_description">Used to show progress of the creation of the ZIP</string>
    <string name="channel2_title">Creating PDF:</string>
    <string name="channel3_title">Creating ZIP:</string>
    <string name="tags_max_reached" formatted="true">You can have a maximum of %d selected tags.</string>
    <string name="only_english">Only english</string>
    <string name="only_japanese">Only japanese</string>
    <string name="only_chinese">Only chinese</string>
    <string name="all_languages">All languages</string>
    <string name="login">Log in</string>
    <string name="login_formatted" formatted="true">Logged as %s</string>
    <string name="logout">Logout</string>
    <string name="favorite_online_manga">Favorite online galleries</string>
    <string name="online_tags">Online tags</string>
    <string name="add_to_online_favorite">Add to online favorites</string>
    <string name="remove_from_online_favorites">Remove from online favorites</string>
    <string name="add_to_online_blacklist">Add to online blacklist?</string>
    <string name="tag_already_in_blacklist">Tag already in blacklist</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="settings">Settings</string>
    <string name="related">Related</string>
    <string name="failed">Failed</string>
    <string name="search">Search</string>
    <string name="prev">Previous</string>
    <string name="prev_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="favorite_login_cta">Log in to sync favorites</string>
    <string name="favorite_empty_online">No online favorites yet</string>
</resources>